--- a/app/views/churches/index.html.erb
+++ b/app/views/churches/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Churches</h1>
+<h1>Hispanic North Central Region</h1>
+<%= link_to 'Add Church', new_church_path %>
+<%= link_to 'List Camp Members', camp_members_path %>
 
 <table>
   <thead>
@@ -28,4 +30,3 @@
 
 <br>
 
-<%= link_to 'New Church', new_church_path %>
