--- a/app/views/emergency_contacts/show.html.erb
+++ b/app/views/emergency_contacts/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Camp member:</strong>
-  <%= @emergency_contact.camp_member %>
+  <%= @emergency_contact.camp_member_id %>
 </p>
 
 <%= link_to 'Edit', edit_emergency_contact_path(@emergency_contact) %> |
