--- a/app/views/camp_members/index.html.erb
+++ b/app/views/camp_members/index.html.erb
@@ -1,9 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Camp Members</h1>
+<%= link_to 'Home', root_path %>
 <%= link_to 'New Camp Member', new_camp_member_path %>
 <%= link_to 'Add Church', new_church_path %>
 <%= link_to 'List Churches', churches_path%>
+<%= link_to 'Emergency Contacts', emergency_contacts_path%>
+<%= link_to 'Payment', payment_informations_path%>
 <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 <table>
   <thead>
@@ -20,8 +23,11 @@
       <th>Email</th>
       <th>Paid</th>
       <th>Payment type</th>
+      <th> </th>
       <th>Entered on</th>
+      <th> </th>
       <th>Church</th>
+      <th> </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -41,8 +47,10 @@
         <td><%= camp_member.email %></td>
         <td><%= camp_member.paid %></td>
         <td><%= camp_member.payment_type %></td>
+        <td> </td>
         <td><%= camp_member.entered_on %></td>
-        <td><%= camp_member.church %></td>
+        <td> </td>
+        <td><%= camp_member.church_id %></td>
         <td><%= link_to 'Show', camp_member %></td>
         <td><%= link_to 'Edit', edit_camp_member_path(camp_member) %></td>
         <td><%= link_to 'Destroy', camp_member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
