--- a/app/views/churches/index.html.erb
+++ b/app/views/churches/index.html.erb
@@ -3,10 +3,12 @@
 <h1>Hispanic North Central Region</h1>
 <%= link_to 'Add Church', new_church_path %>
 <%= link_to 'List Camp Members', camp_members_path %>
+<%= link_to 'Home', root_path %>
+<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 
 <table>
   <thead>
-    <tr>
+
       <th>Church name</th>
       <th>Pastor name</th>
       <th>Mens leader</th>
