--- a/app/views/payment_informations/index.html.erb
+++ b/app/views/payment_informations/index.html.erb
@@ -1,7 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Payment Informations</h1>
-
+<%= link_to 'List Camp Member', camp_members_path %>
+<%= link_to 'Add Church', new_church_path %>
+<%= link_to 'List Churches', churches_path%>
+<%= link_to 'Emergency Contacts', emergency_contacts_path%>
+<%= link_to 'Home', root_path %>
+<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 <table>
   <thead>
     <tr>
@@ -25,7 +30,7 @@
         <td><%= payment_information.cvv %></td>
         <td><%= payment_information.amount_paid %></td>
         <td><%= payment_information.payment_type %></td>
-        <td><%= payment_information.camp_member %></td>
+        <td><%= payment_information.camp_member_id %></td>
         <td><%= link_to 'Show', payment_information %></td>
         <td><%= link_to 'Edit', edit_payment_information_path(payment_information) %></td>
         <td><%= link_to 'Destroy', payment_information, method: :delete, data: { confirm: 'Are you sure?' } %></td>
