--- a/app/views/payment_informations/show.html.erb
+++ b/app/views/payment_informations/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Camp member:</strong>
-  <%= @payment_information.camp_member %>
+  <%= @payment_information.camp_member_id %>
 </p>
 
 <%= link_to 'Edit', edit_payment_information_path(@payment_information) %> |
