--- a/app/views/emergency_contacts/index.html.erb
+++ b/app/views/emergency_contacts/index.html.erb
@@ -5,6 +5,7 @@
 <%= link_to 'Add Church', new_church_path %>
 <%= link_to 'List Churches', churches_path%>
 <%= link_to 'Payment', payment_informations_path%>
+<%= link_to 'Home', root_path %>
 <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 
 <table>
